# Phoenix_Engine

./: .gitignore  README.md  app.py  cli_pro.py  fix_and_finalize_v13.py  fix_timezone_bias.py  fix_v13_crash.py  pyproject.toml
phoenix_engine/api/: app.py  main.py
phoenix_engine/core/: config.py  context.py  factory.py  models.py  orchestrator.py
phoenix_engine/domain/: analysis.py  celestial.py  config.py  enums.py  input.py  match.py  output.py  timing.py
phoenix_engine/engines/: birth.py  match.py
phoenix_engine/infrastructure/astronomy/: swiss.py
phoenix_engine/infrastructure/time/: manager.py
phoenix_engine/plugins/: advanced_dashas.py  ashtakavarga_plugin.py  base.py  birth_plugin.py  jaimini.py  jaimini_plugin.py  parasari_yogas_plugin.py  prediction.py  strength.py  subtle.py  tajaka_plugin.py  timing.py  transit_plugin.py  vargas.py
phoenix_engine/plugins/astronomy/: positions.py
phoenix_engine/plugins/doshas/: kuja.py  sarpa.py
phoenix_engine/plugins/match/: ashta_kuta.py
phoenix_engine/utils/: geolocation.py
phoenix_engine/vedic/: const.py
phoenix_engine/vedic/calculations/: ashtakavarga.py  avastha.py  bhava_bala.py  dasha.py  gochar.py  jaimini.py  maitri.py  panchanga.py  phala.py  shadbala_engine.py  special_lagnas.py  strength.py  transit_calc.py  upagraha.py  varga.py  vedic_math.py  yoga.py
phoenix_engine/vedic/calculations/dashas/: chara.py  narayana.py  sudasa.py  yogini.py
phoenix_engine/vedic/calculations/jaimini/: arudhas.py  drishti.py  jaimini_yogas.py  karakas.py
tests/: test_smoke.py
(+4 files in other folders)
